@@ -45,6 +45,7 @@ tasksel (3.10) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * Remove manual task.
+  * Remove unused support for Packages: task-fields.
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 25 Mar 2012 14:52:49 +0200
 
